@@ -89,6 +89,7 @@ dillo-fltk2
  - Disabled double buffering (good for debugging redraws).
  - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).
  - Made "New browser window" inherit the panel style of its parent.
+ - Made TopGroup a PackedGroup, simplifying UI code and removing workarounds.
    Patches: Johannes Hofmann
 +- Made progress bars resize automatically.
    Patches: Johannes Hofmann, Jorge Arellano Cid
